
Apparently some versions of gcc (or maybe ld?) don't like duplicate
libraries on the link line.  Fix provided by Mark <somnione@gmx.net>.
----------------------------------------------------------------------
Thu Apr 24 14:29:05 2003                        Michael Jennings (mej)

Fixed seg fault caused by people who neglect to grow the multichar
font list in parallel with the normal font list.

Also tweaked the default fonts to be less error-prone.
----------------------------------------------------------------------
Mon May 12 22:07:45 2003                        Michael Jennings (mej)

Use icon window instead of icon pixmap only if strict ICCCM compliance
is requested via ./configure --enable-strict-icccm
----------------------------------------------------------------------
Tue Jun 10 12:19:00 2003                        Michael Jennings (mej)

Patch from Matt Zimmerman <mdz@debian.org> to correct buffer overflow
when $ETERMPATH is set too large.
----------------------------------------------------------------------
Tue Jul 29 22:47:18 2003                        Michael Jennings (mej)

Patch from David Lloyd <dmlloyd@tds.net> to support ANSI sequences for
bright colors.  I haven't tested this, so I hope it works. *grin*

Also, commented out the F1-F10 bindings in the Escreen theme; they're
too intrusive.

Added support for Ctrl-t to open a new Escreen "tab" (as with
Mozilla).
----------------------------------------------------------------------
Sun Aug 17 09:55:43 2003                        Michael Jennings (mej)

Modified and applied a patch from Marc Merlin <marc@merlins.org> to
auto-generate the pixmap menu entries via the Etbg_update_list
script.  You can now pass "-m /path/to/menufile" to Etbg_update_list
to generate the entries in the specified file.  Hopefully I'll make
this process automated, at least on my end, in the near future.
----------------------------------------------------------------------